--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <header></header>
-        <body></body>
+        <header>
+            <nav></nav>
+        </header>
+        <main></main>
         <footer></footer>
     </body>
 </html>
