--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <header>
-            <nav></nav>
+        <header class="header l-container">
+                <h1 class="header__logo">Taiwan Travel</h1>
+                <nav class="navbar">
+                    <div class="navbar__item">
+                        <span class="navbar__item__zh">找景點</span>
+                        <span class="navbar__item__en">ATTRACTION</span>
+                    </div>
+                    <div class="navbar__item">
+                        <span class="navbar__item__zh">找美食</span>
+                        <span class="navbar__item__en">DELICACY</span>
+                    </div>
+                    <div class="navbar__item">
+                        <span class="navbar__item__zh">找活動</span>
+                        <span class="navbar__item__en">ACTIVITY</span>
+                    </div>
+                    <div class="navbar__item">
+                        <span class="navbar__item__zh">探索更多</span>
+                        <span class="navbar__item__en">MORE</span>
+                    </div>
+                </nav>
+                <div class="header__iconbar">
+
+                </div>
         </header>
         <main></main>
         <footer></footer>
