header and navbar complete

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,15 @@
                         <span class="navbar__item__zh">找景點</span>
                         <span class="navbar__item__en">ATTRACTION</span>
                     </div>
+                    <div class="navbar__menu">
+                        <div class="navbar__menu__item navbar__menu__item--meal"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--drink"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--snack"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--souvenir"></div>
+                    </div>
                     <div class="navbar__item">
                         <span class="navbar__item__zh">找美食</span>
                         <span class="navbar__item__en">DELICACY</span>
@@ -29,10 +38,13 @@
                     </div>
                 </nav>
                 <div class="header__iconbar">
-
+                    <div class="header__iconbar__icon header__iconbar__icon--like"></div>
+                    <div class="header__iconbar__icon header__iconbar__icon--faq"></div> 
                 </div>
         </header>
-        <main></main>
+        <main>
+
+        </main>
         <footer></footer>
     </body>
 </html>
