--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,40 @@
                         <span class="navbar__item__zh">找美食</span>
                         <span class="navbar__item__en">DELICACY</span>
                     </div>
+                    <div class="navbar__menu">
+                        <div class="navbar__menu__item navbar__menu__item--meal"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--drink"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--snack"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--souvenir"></div>
+                    </div>
                     <div class="navbar__item">
                         <span class="navbar__item__zh">找活動</span>
                         <span class="navbar__item__en">ACTIVITY</span>
                     </div>
+                    <div class="navbar__menu">
+                        <div class="navbar__menu__item navbar__menu__item--meal"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--drink"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--snack"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--souvenir"></div>
+                    </div>
                     <div class="navbar__item">
                         <span class="navbar__item__zh">探索更多</span>
                         <span class="navbar__item__en">MORE</span>
+                    </div>
+                    <div class="navbar__menu">
+                        <div class="navbar__menu__item navbar__menu__item--meal"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--drink"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--snack"></div>
+                        <div class="navbar__menu__vector"></div>
+                        <div class="navbar__menu__item navbar__menu__item--souvenir"></div>
                     </div>
                 </nav>
                 <div class="header__iconbar">
@@ -43,6 +70,7 @@
                 </div>
         </header>
         <main>
+
 
         </main>
         <footer></footer>
