exp comlete and menuList component

--- a/src/index.html
+++ b/src/index.html
@@ -90,19 +90,43 @@
                 </div>
             </div>
             <div class="exp l-container--left">
-                <div class="exp__txtWrapper">
-                    <h1 class="exp__txtWrapper__title">Explore</h1>
-                    <h1 class="exp__txtWrapper__subTitle">探索台灣每個角落</h1>
-                    <h5 class="exp__txtWrapper__content">台灣擁有高山峽谷及四面環海地理特性，因此充滿各種自然景致等待人們發現，而各縣市有其特色文化與在地必嚐美食，無論想要來場山林陶冶身心之旅，抑或體驗歷史人文深度旅行，都能在台灣這片土地上踏尋。</h5>
+                <div class="l-row">
+                    <div class="exp__txtWrapper l-4-10">
+                        <h1 class="exp__txtWrapper__title">Explore</h1>
+                        <h1 class="exp__txtWrapper__subTitle">探索台灣每個角落</h1>
+                        <h5 class="exp__txtWrapper__content">台灣擁有高山峽谷及四面環海地理特性，因此充滿各種自然景致等待人們發現，而各縣市有其特色文化與在地必嚐美食，無論想要來場山林陶冶身心之旅，抑或體驗歷史人文深度旅行，都能在台灣這片土地上踏尋。</h5>
+                    </div>
+                    <div class="exp__imgWrapper l-6-10">
+                        <div class="exp__imgWrapper__img exp__imgWrapper__img--01"></div>
+                        <span class="exp__imgWrapper__txt">台東金剛大道</span>
+                        <div class="exp__imgWrapper__img exp__imgWrapper__img--02"></div>
+                        <span class="exp__imgWrapper__txt">南投日月潭文武廟</span>
+                        <div class="exp__imgWrapper__img exp__imgWrapper__img--03"></div>
+                        <span class="exp__imgWrapper__txt">基隆夜市</span>
+                    </div>
                 </div>
-                <div class="exp__imgWrapper">
-                    <div class="exp__imgWrapper__img exp__imgWrapper__img--01"></div>
-                    <span class="exp__imgWrapper__txt">台東金剛大道</span>
-                    <div class="exp__imgWrapper__img exp__imgWrapper__img--02"></div>
-                    <span class="exp__imgWrapper__txt">南投日月潭文武廟</span>
-                    <div class="exp__imgWrapper__img exp__imgWrapper__img--03"></div>
-                    <span class="exp__imgWrapper__txt">基隆夜市</span>
+                <div class="l-row">
+                    <div class="exp__menuWrapper l-2-12">
+                        <ul class="menuList">
+                            <li class="menuList__item">都市文情：北台灣</li>
+                            <li class="menuList__item">休閒樂活：中台灣</;>
+                            <li class="menuList__item">人情小吃：南台灣</li>
+                            <li class="menuList__item">自然生態：東台灣</li>
+                            <li class="menuList__item">小島風情：離島地區</;>
+                        </ul>
+                    </div>
+                    <div class="exp__imgWrapper l-10-12">
+                        <div class="exp__imgWrapper__img exp__imgWrapper__img--04"></div>
+                        <span class="exp__imgWrapper__txt">南投合歡山</span>
+                        <div class="exp__imgWrapper__img exp__imgWrapper__img--05"></div>
+                        <span class="exp__imgWrapper__txt">北投圖書館</span>
+                        <div class="exp__imgWrapper__img exp__imgWrapper__img--06"></div>
+                        <span class="exp__imgWrapper__txt">樹林三角埔頂山步道</span>
+                        <div class="exp__imgWrapper__img exp__imgWrapper__img--07"></div>
+                        <span class="exp__imgWrapper__txt">水里車埕車站</span>
+                    </div>
                 </div>
+                
             </div>
             
 
