--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
                     <button class="banner__search__btn">GO</button>
                 </div>
             </div>
-            <div class="exp l-container--left">
+            <div class="exp l-container">
                 <div class="l-row">
                     <div class="exp__txtWrapper l-4-10">
                         <h1 class="exp__txtWrapper__title">Explore</h1>
@@ -126,10 +126,31 @@
                         <span class="exp__imgWrapper__txt">水里車埕車站</span>
                     </div>
                 </div>
-                
             </div>
-            
+            <div class="part">
+                <div class="l-row">
+                    <div class="part__img l-6-12"></div>
+                    <div class="l-1-12"></div>
+                    <div class="l-5-12">
+                        <div class="part__txtWrapper">
+                            <h1 class="part__txtWrapper__title">Participate</h1>
+                            <h1 class="part__txtWrapper__subTitle">參與四季的更迭</h1>
+                            <h5 class="part__txtWrapper__content">根據季節的熱門活動主題，邀請你一同享受旅行中的每一個時刻。</h5>
+                        </div>
+                        <div class="part__menuWrapper">
+                            <ul class="menuList">
+                                <li class="menuList__item">初春花海漫遊</li>
+                                <li class="menuList__item">豔夏水上活動</li>
+                                <li class="menuList__item">微秋星空露營</li>
+                                <li class="menuList__item">寒冬暖心溫泉</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="eny">
 
+            </div>
         </main>
         <footer></footer>
         <script src="js/flickity.min.js"></script>
