subscribe temp commit

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
         </header>
         <main>
             <div class="banner">
-                <div class="js-carousel">
+                <div class="js-banner-carousel">
                     <div class="carousel-cell">
                         <div class="banner__img"></div>
                     </div>
@@ -148,8 +148,57 @@
                     </div>
                 </div>
             </div>
-            <div class="eny">
-
+            <div class="enjoy">
+                <div class="enjoy__txtWrapper l-container">
+                    <div class="l-row">
+                        <div class="l-4-10">
+                            <h1 class="enjoy__txtWrapper__title">Explore</h1>
+                            <h1 class="enjoy__txtWrapper__subTitle">探索台灣每個角落</h1>
+                        </div>
+                        <div class="l-6-10">
+                            <h5 class="enjoy__txtWrapper__content">台灣擁有高山峽谷及四面環海地理特性，因此充滿各種自然景致等待人們發現，而各縣市有其特色文化與在地必嚐美食，無論想要來場山林陶冶身心之旅，抑或體驗歷史人文深度旅行，都能在台灣這片土地上踏尋。</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="js-enjoy-carousel">
+                    <div class="carousel-cell">
+                        <div class="enjoy__img enjoy__img--01"></div>
+                    </div>
+                    <div class="carousel-cell">
+                        <div class="enjoy__img enjoy__img--02"></div>
+                    </div>
+                    <div class="carousel-cell">
+                        <div class="enjoy__img enjoy__img--03"></div>
+                    </div>
+                    <div class="carousel-cell">
+                        <div class="enjoy__img enjoy__img--04"></div>
+                    </div>
+                    <div class="carousel-cell">
+                        <div class="enjoy__img enjoy__img--05"></div>
+                    </div>
+                    <div class="carousel-cell">
+                        <div class="enjoy__img enjoy__img--06"></div>
+                    </div>
+                    <div class="carousel-cell">
+                        <div class="enjoy__img enjoy__img--07"></div>
+                    </div>
+                    <div class="carousel-cell">
+                        <div class="enjoy__img enjoy__img--08"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="subscribe">
+                <div class="l-container">
+                    <div class="subscribe__txtWrapper l-row">
+                        <div class="subscribe__img l-6-12"></div>
+                        <div class="l-1-12"></div>
+                        <div class="l-5-12">
+                            <h1 class="subscribe__txtWrapper__title">Subscribe</h1>
+                            <h1 class="subscribe__txtWrapper__subTitle">每個月來一場自在旅行</h1>
+                            <h5 class="subscribe__txtWrapper__content">如果您願意收到每月的旅遊資訊，一起感受台灣旅行的美好。</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
         <footer></footer>
