--- a/src/index.html
+++ b/src/index.html
@@ -207,18 +207,20 @@
                 </div>
             </div>
         </main>
-        <footer class="footer l-container">
-            <div class="footer__iconbar">
-                <span class="footer__iconbar__txt">Follow us</span>
-                <div class="footer__iconbar__item footer__iconbar__item--meta"></div>
-                <div class="footer__iconbar__item footer__iconbar__item--ig"></div>
-                <div class="footer__iconbar__item footer__iconbar__item--yt"></div>
-            </div>
-            <span class="footer__txt">Copyright © 2021 TRAVEL. All rights reserved.</span>
-            <div class="footer__langs">
-                <span class="footer__langs__item footer__langs__item--active">CH</span>
-                <span class="footer__langs__item">EN</span>
-                <span class="footer__langs__item">JA</span>
+        <footer class="footer">
+            <div class="footer__wrapper l-container">
+                    <div class="footer__wrapper__iconbar">
+                        <span class="footer__wrapper__iconbar__txt">Follow us</span>
+                        <div class="footer__wrapper__iconbar__item footer__wrapper__iconbar__item--meta"></div>
+                        <div class="footer__wrapper__iconbar__item footer__wrapper__iconbar__item--ig"></div>
+                        <div class="footer__wrapper__iconbar__item footer__wrapper__iconbar__item--yt"></div>
+                    </div>
+                    <span class="footer__wrapper__txt">Copyright © 2021 TRAVEL. All rights reserved.</span>
+                    <div class="footer__wrapper__langs">
+                        <span class="footer__wrapper__langs__item footer__wrapper__langs__item--active">CH</span>
+                        <span class="footer__wrapper__langs__item">EN</span>
+                        <span class="footer__wrapper__langs__item">JA</span>
+                    </div>
             </div>
         </footer>
         <script src="js/flickity.min.js"></script>
