--- a/src/search.html
+++ b/src/search.html
@@ -106,7 +106,8 @@
                 </div>
             </aside>
             <main class="searchMain">
-                
+                <section class="searchFilter"></section>
+                <section class="itemList"></section>
             </main>
         </div>
         <footer class="footer">
