--- a/src/search.html
+++ b/src/search.html
@@ -106,8 +106,37 @@
                 </div>
             </aside>
             <main class="searchMain">
-                <section class="searchFilter"></section>
-                <section class="itemList"></section>
+                <section class="l-row searchFilter">
+                        <div class="l-6-10">
+                            <div class="searchInput">
+                                <div class="searchInput__icon"></div>
+                                <input type="text" class="searchInput__input" placeholder="想要去哪裡">
+                                <button class="searchInput__btn">GO</button>
+                            </div>
+                        </div>
+                        <div class="l-4-10">
+                            <div class="searchFilter__sortWrapper">
+                                <span class="searchFilter__sortWrapper__txt">排序方式</span>
+                                <div class="searchFilter__sortWrapper__switchWrapper">
+                                    <h6 class="searchFilter__sortWrapper__switchWrapper__item searchFilter__sortWrapper__switchWrapper__item--active">熱門優先</h6>
+                                    <h6 class="searchFilter__sortWrapper__switchWrapper__item">距離優先</h6>
+                                </div>
+                            </div>
+                        </div>
+                </section>
+                <section class="itemList">
+                    <div class="l-list">
+                        <div class="l-list-item-3">1</div>
+                        <div class="l-list-item-3">2</div>
+                        <div class="l-list-item-3">3</div>
+                        <div class="l-list-item-3">4</div>
+                        <div class="l-list-item-3">5</div>
+                        <div class="l-list-item-3">6</div>
+                        <div class="l-list-item-3">7</div>
+                        <div class="l-list-item-3">8</div>
+                        <div class="l-list-item-3">9</div>
+                    </div>
+                </section>
             </main>
         </div>
         <footer class="footer">
@@ -126,7 +155,5 @@
                     </div>
             </div>
         </footer>
-        <!-- <script src="js/flickity.min.js"></script>
-        <script src="js/main.js"></script> -->
     </body>
 </html>
